<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity3"
    tools:context=".Activity3">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="90dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/add_link_description"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <TextView
        android:id="@+id/link_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/link_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/link_url" />

    <TextView
        android:id="@+id/link_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="50dp"
        android:text="@string/link_url"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/link_name" />


    <EditText
        android:id="@+id/link_name_input"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/link_name_hint"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/link_url_input"
        app:layout_constraintLeft_toRightOf="@+id/link_name" />

    <EditText
        android:id="@+id/link_url_input"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:hint="@string/link_url_hint"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/link_name_input" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/links_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>