<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/btnDoMagic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="15dp"
        android:text="@string/button_about_me"
        android:textColorLink="#03A9F4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/clickyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/button_clicky"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnDoMagic"
        app:layout_constraintStart_toEndOf="@+id/btnDoMagic" />

    <Button
        android:id="@+id/linkCollector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_link_collector"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnDoMagic"
        app:layout_constraintTop_toBottomOf="@+id/btnDoMagic" />

    <Button
        android:id="@+id/primeFinder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/button_prime_finder"
        app:layout_constraintTop_toBottomOf="@+id/linkCollector"
        app:layout_constraintStart_toStartOf="@+id/linkCollector"/>


</androidx.constraintlayout.widget.ConstraintLayout>